# pypb

./: .gitignore  README.md  pyproject.toml
activities/: camera_pb2.py  camera_pb2.pyi  camera_pb2_grpc.py  workflow_pb2.py  workflow_pb2.pyi
apis/: client_pb2.py  client_pb2.pyi  client_pb2_grpc.py
areas/: area_pb2.py  area_pb2.pyi
devices/: devices_pb2.py  devices_pb2.pyi  maintenance_pb2.py  maintenance_pb2.pyi  maintenance_pb2_grpc.py
financial/: financial_pb2.py  financial_pb2.pyi
identities/: authentication_pb2.py  authentication_pb2.pyi  authentication_pb2_grpc.py  identities_pb2.py  identities_pb2.pyi
models/: fusion_pb2.py  fusion_pb2.pyi  models_pb2.py  models_pb2.pyi
notifies/: notify_pb2.py  notify_pb2.pyi
packets/: dataModel_pb2.py  dataModel_pb2.pyi  dataModule_pb2.py  dataModule_pb2.pyi  dataModule_pb2_grpc.py  messages_pb2.py  messages_pb2.pyi
reports/: report_pb2.py  report_pb2.pyi  report_pb2_grpc.py
services/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  repositories_pb2.py  repositories_pb2.pyi
trips/: trip_pb2.py  trip_pb2.pyi
utils/buf/validate/: validate_pb2.py  validate_pb2_grpc.py
