[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fatehan"
version = "0.2.0"
description = "gRPC/Protobuf message and service stubs for Fatehan"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "protobuf>=6.31.1,<7",
  "grpcio>=1.62,<2",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.74.0",
]

[project.urls]
Repository = "https://example.com/repo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fatehan*"]
